// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectDetails /> Should adopt the "project" property 1`] = `
<Wrapper
  animate={true}
>
  <ContentWrapper>
    <BackLink
      position="top"
    />
    <SpeechBubble
      arrowHeight="9vh"
      arrowPosition="bottom-right"
      backgroundColor="#aedd2c"
      color="#000"
      isGhost={false}
      makeAppear={false}
      padding="1.5rem 1rem"
      showArrowBreakpoint="750px"
    >
      <h1>
        Title for test case
      </h1>
      <Description>
        Description for test case
      </Description>
      <Image
        images={
          Array [
            Object {
              "file": Object {
                "details": Object {
                  "image": Object {
                    "height": 10,
                    "width": 20,
                  },
                },
                "fileName": "test-s.png",
                "url": "/test-s.png",
              },
              "title": "Test image",
            },
            Object {
              "file": Object {
                "details": Object {
                  "image": Object {
                    "height": 20,
                    "width": 30,
                  },
                },
                "fileName": "test-m.png",
                "url": "/test-m.png",
              },
              "title": "Test image",
            },
            Object {
              "file": Object {
                "details": Object {
                  "image": Object {
                    "height": 30,
                    "width": 40,
                  },
                },
                "fileName": "test-l.png",
                "url": "/test-l.png",
              },
              "title": "Test image",
            },
            Object {
              "file": Object {
                "details": Object {
                  "image": Object {
                    "height": 50,
                    "width": 60,
                  },
                },
                "fileName": "test-xl.png",
                "url": "/test-xl.png",
              },
              "title": "Test image",
            },
          ]
        }
      />
      <Article>
        <h1
          id="article-for-test-case"
          key="0"
        >
          Article for test case
        </h1>
        

        <p
          key="2"
        >
          <a
            href="https://the.world/"
            rel="noopener noreferrer"
            target="_blank"
          >
            add attributes to link
          </a>
        </p>
        

      </Article>
    </SpeechBubble>
    <BackLink
      position="bottom"
    />
  </ContentWrapper>
</Wrapper>
`;

exports[`<ProjectDetails /> Should handle case where "images" is not provided 1`] = `
<Wrapper
  animate={true}
>
  <ContentWrapper>
    <BackLink
      position="top"
    />
    <SpeechBubble
      arrowHeight="9vh"
      arrowPosition="bottom-right"
      backgroundColor="#aedd2c"
      color="#000"
      isGhost={false}
      makeAppear={false}
      padding="1.5rem 1rem"
      showArrowBreakpoint="750px"
    >
      <h1>
        Title for test case
      </h1>
      <Description>
        Description for test case
      </Description>
      <Image
        images={Array []}
      />
      <Article>
        <h1
          id="article-for-test-case"
          key="0"
        >
          Article for test case
        </h1>
        

        <p
          key="2"
        >
          <a
            href="https://the.world/"
            rel="noopener noreferrer"
            target="_blank"
          >
            add attributes to link
          </a>
        </p>
        

      </Article>
    </SpeechBubble>
    <BackLink
      position="bottom"
    />
  </ContentWrapper>
</Wrapper>
`;
